kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: kibana
  labels:
    component: kibana
spec:
  type: NodePort
  selector:
    component: kibana
  ports:
  - port: 5601
    targetPort: 5601
